lab1/Test/L1-A-3-22.output
Error Type A at Line 2
Error Type A at Line 6
Error Type B at Line 7
Error Type B at Line 7
Error Type A at Line 7
