lab1/Test/L1-A-3-22.cmm
struct {
}IeC8fmJW7In1bmM , gM7HDbALV9K , ZW9C6EbVF ~


;
float ~;
, while $